--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,7 +2,7 @@ name: Rust CI
 
 on:
   push:
-    branches: [main]
+    branches: [main, 4-fix-cargo-deny-in-sast-stage-of-rust-pipeline]
   pull_request:
     branches: [main]
 
@@ -44,7 +44,7 @@ jobs:
         run: cargo install cargo-audit
       - name: Run cargo-audit
         run: cargo audit
-    # - name: Install cargo-deny
-    #   run: cargo install cargo-deny
-    # - name: Run cargo-deny
-    #   run: cargo deny check
+      - name: Install cargo-deny
+        run: cargo install cargo-deny
+      - name: Run cargo-deny
+        run: cargo deny check
