Implemented a lot of things (still working on). Complete patchnote will be here when the branch will be merged

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,7 +2,7 @@ name: Rust CI
 
 on:
   push:
-    branches: [main, 4-fix-cargo-deny-in-sast-stage-of-rust-pipeline]
+    branches: [main]
   pull_request:
     branches: [main]
 
